--- a/casetwo.html
+++ b/casetwo.html
@@ -169,10 +169,8 @@ Hence, people who journal their dreams help them to process it better than think
 		<div class="backgrnd4">
 		  <p>We initially started with a completely different UI Kit that we thought would suit our app theme, but later ended up making a drastic change as testing revealed to us that an overwhelming number of users did not associate the colour scheme and theme to the goals of our app.
 			  <img src="img/olduistyle.png">
-			  &nbsp;<br>
-
-After thinking about this, we re-designed and picked a new colour scheme to better suit our goal with a number of improvements made along the way, our reference used is from a music video called GSG by Leah Dou.</p>
-			<img src="img/NuUIKit.png">
+			  &nbsp;<br></p>
+			
 			<!--img goes here-->
 			
 
@@ -187,11 +185,28 @@ After thinking about this, we re-designed and picked a new colour scheme to bett
 		      <div class="study5text">
           <h1>Prototype & Test</h1>
 		<div class="backgrnd5">
-		  <h3>Hi-fi Prototype</h3>
+		  <h3>User Testing Results</h3>
+		  <p>Upon completion of our testing and collating the data collected, we discovered that some things did not go as we originally planned or were received very well, and required us to immediately make an iteration for our app prototype.<br>
+			  <br>
+			  Notably the following results:<br>
+			  • 65% of users felt the prototype color scheme did not match the function and feel the app was going for<br>
+			  • 50% of users did not like the bubble/thought shaped windows for various reasons<br>
+			  • 80% of users did not know their own star signs, which made it difficult to complete the onboarding process as the star signs did not have any identifiable text.</p>
+			<p><br>
+			  Despite the shortcomings we did see some positives from our feedback:<br>
+			  • 90% of users enjoyed the DreamDictionary and being able to look up meanings and interpretations<br>
+			  • 87% of users said the DreamFeed layout is great, easily understood and usable</p>
+			<p>Once we had the results we prioritized the worst performing metrics to be fixed first as we understood if the users were not happy they would not use our app.</p>
+			<h3>Iterated UI Style Guide</h3>
+			<p>After thinking about this, we re-designed and picked a new colour scheme to better suit our goal with a number of improvements made along the way, our reference and inspiration used is from a music video called GSG by Leah Dou.</p>
+			<img src="img/NuUIKit.png">
+			<p>The colour scheme and theme was universally agreed to be a substantially better fit for our app going forward.</p>
+<h3>Hi-fi Prototype</h3>
 			<p>Our Hi-Fi prototype started with a completely re-designed and re-themed Mobile app based on the feedback we got from previous user testing.</p>
 			<img src="img/protofinal.png">
 			<p>Testing was once again done on the Hi-Fi prototype iteration to ensure our changes had the intended effect, we compiled the various data that we all collected and results confirmed we had fixed out initial problems from the low-fidelity prototype, with no glaring issues at present we moved onto a website landing page prototype.</p>
 			<img src="img/webpage.png">
+			
 <!--img goes here-->
 				  </div>
 		  </div>
