--- a/casetwo.html
+++ b/casetwo.html
@@ -94,7 +94,7 @@
 • Users we are targeting<br>
 • Functionalities commonly used by users/people<br>
 • Colour scheme fits with our app & brand<br>
-•  </p>
+  </p>
 				  <h4>Methdologies</h4>
 		  <p>We used an assortment of methodologies to conduct our research and sort our data into something understandable, including but not limited to (in no particular order):<br>
 • Card Sorting<br>
@@ -224,7 +224,7 @@ Hence, people who journal their dreams help them to process it better than think
 			<!--img goes here-->
 			&nbsp;&nbsp;
 		<h1>Conclusion</h1>
-		  <p>While working on this project i learned that research and testing is really paramount to working towards the final product that with the best outcome for as many users as possible. Of course its not possible to 100% satisfy everyones wants and needs but even a 10% improvement is much welcome. I learned to not get too hung up on setting the design out in a specific way and to be fleixble in the ways of solving the problem. I beleive that slimming down the myriad of options and condensing the information is fixing the problem at the core.</p>
+		  <p>The implementation of interactive prototypes and usability testing allowed us to gather valuable insights and refine the design iteratively. Incorporating user feedback and data-driven insights, we were able to make informed design decisions and optimize the application for enhanced user satisfaction and engagement.</p>
 			<!--img goes here-->
 				  </div>
 				 <img src="img/greenbanner.png" class="centerimg">
