--- a/casetwo.html
+++ b/casetwo.html
@@ -78,7 +78,7 @@
 			  </div>
 		  
 			  </div>
-		  <div class="imgcontainer"><img src="img/MobThin.png"></div>
+		  <div class="imgcontainer"><img src="img/MobDrmThin.png"></div>
 		  </div>
     
 	<div class="content two">
