--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 	    <div class="study2right"></div>
 		      <div class="study2text">
           <h3>Case Study</h3>
-		  <h1>Food Mood</h1>
-		  <p>Research & Redesign</p>
+		  <h1>Dream Verse</h1>
+		  <p>Front-End Developer / UI Designer</p>
 		  <div class="study2link">
-		  <a href="#"><p2> View case study <i class="bi bi-arrow-right" fill="#FFFFFF" style="vertical-align: middle;"></i></p2></a>
+		  <a href="casetwo.html"><p2> View case study <i class="bi bi-arrow-right" fill="#FFFFFF" style="vertical-align: middle;"></i></p2></a>
 			  </div>
 		  </div>
 	</div>
