--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 		  
     <h1>Matthew Turner</h1>
     <h3>UX Designer</h3>
-    <p>some text is sitting in here as a temporary placeholder for the time being, please hang tight.</p>
+    <p1>I'm a designer focused on developing straightforward answers to intricate issues, using practical problemsolving skills and empathetic listening.</p1>
     <h3 class="expact"> Experience & Activites</h3>
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 	<div class="rightbutton">
@@ -77,7 +77,10 @@
 	</div>
 	<div class="carousel-inner">
     <div class="carousel-item active">
-    <h1>this is some text</h1>
+    <h1>User Experience Design</h1>
+	<p3>User Research & Testing, Affinity Diagramming, Wireframing, Card Sorting<br>
+Ideation & Prototyping, User Flow Diagramming, Heuristic Evaluation<br>
+Proto & User Personas, Mobile Design,</p3>
     </div>
     <div class="carousel-item">
     <h1>this is alt text</h1>
@@ -91,10 +94,20 @@
 <!-- right button arrow container box-->	
 
 	</div>
+		
 <div class="skillsContainer">
-		<h4 class="firstSkill"> User Experience Design</h4>
-			<h4 class="secondSkill"> User Interface Design</h4>
-			<h4 class="thirdSkill"> User Research</h4>
+		<h3 class="firstSkill"> Resume & Contact</h3><br>
+
+	
+<a href="https://www.linkedin.com/in/matthew-turner-2a2130252/"><i class="bi bi-linkedin"><p7>&nbsp;LinkedIn</p7>
+	</i></a><br>
+
+<a href="himatthewt@gmail.com"><i class="bi bi-envelope"><p7>&nbsp;Email Me</p7>
+	</i></a><br>
+
+	<a href="https://drive.google.com/file/d/1fH1DhcCMz73y1aO2DeaefCCPngSccVs9/view"><i class="bi bi-file-person"><p7>&nbsp;Resume</p7></i></a>
+			<!--<h4 class="secondSkill"> User Interface Design</h4>
+			<h4 class="thirdSkill"> User Research</h4>-->
 		</div>
 	</div>
 	</div>
