--- a/about.html
+++ b/about.html
@@ -48,8 +48,12 @@
 	<div class="text2">
 		  
     <h1>Matthew Turner</h1>
-    <h3>UX Designer</h3>
-    <p1>I'm a designer focused on developing straightforward answers to intricate issues, using practical problemsolving skills and empathetic listening.</p1>
+    <h3>UX/UI Designer</h3>
+    <p1>I'm a designer focused on developing straightforward answers to intricate issues, using practical problemsolving skills and empathetic listening.</p1><br>
+
+		&nbsp;
+		<h4>Matthew Turner's Story</h4>
+		<p1>MAtthew Turner has _______. Since early childhood, he had been sketching cars, cartoons and other illustrations.</p1>
     <h3 class="expact"> Experience & Activites</h3>
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 	<div class="rightbutton">
