--- a/about.html
+++ b/about.html
@@ -49,11 +49,12 @@
 		  
     <h1>Matthew Turner</h1>
     <h3>UX/UI Designer</h3>
-    <p1>I'm a designer focused on developing straightforward answers to intricate issues, using practical problemsolving skills and empathetic listening.</p1><br>
+    <p1>I'm a designer focused on developing straightforward answers to intricate issues, using practical problemsolving skills and empathetic listening.</p1><br><br>
 
-		&nbsp;
-		<h4>Matthew Turner's Story</h4>
-		<p1>MAtthew Turner has _______. Since early childhood, he had been sketching cars, cartoons and other illustrations.</p1>
+
+	
+		
+	<p1>Matthew is a problem solver, looking to break into the UX/UI Design Space. Having previously studied a Bachelor of Graphic design, he is looking to merge both Graphic Design & Motion Graphics with UX/UI to create the best user experiences possible.</p1>
     <h3 class="expact"> Experience & Activites</h3>
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 	<div class="rightbutton">
@@ -87,7 +88,7 @@ Ideation & Prototyping, User Flow Diagramming, Heuristic Evaluation<br>
 Proto & User Personas, Mobile Design,</p3>
     </div>
     <div class="carousel-item">
-    <h1>this is alt text</h1>
+    <h1>User Interface Design</h1>
     </div>
     <div class="carousel-item">
     <h1> and more text again</h1>
