--- a/about.html
+++ b/about.html
@@ -48,13 +48,13 @@
 	<div class="text2">
 		  
     <h1>Matthew Turner</h1>
-    <h3>UX/UI Designer</h3>
-    <p1>I'm a designer focused on developing straightforward answers to intricate issues, using practical problemsolving skills and empathetic listening.</p1><br><br>
+    <h3>About Me!</h3>
+    <p1>I'm a designer currently looking for a career as a UX/UI Designer, focused on developing straightforward answers to intricate issues, using practical problemsolving skills and empathetic listening.</p1><br>
+		<p1>My background in Graphic Design is an asset when it comes to UI Design. In my spare time i tinker with Motion Graphics, HTML and CSS web technologies and spend time with my wife.</p1>
 
-
-	
-		
-	<p1>Matthew is a problem solver, looking to break into the UX/UI Design Space. Having previously studied a Bachelor of Graphic design, he is looking to merge both Graphic Design & Motion Graphics with UX/UI to create the best user experiences possible.</p1>
+		&nbsp;
+		<!--<h4>Matthew Turner's Story</h4>
+		<p1>Matthew Turner has _______. Since early childhood, he had been sketching cars, cartoons and other illustrations.</p1>-->
     <h3 class="expact"> Experience & Activites</h3>
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
 	<div class="rightbutton">
@@ -89,9 +89,13 @@ Proto & User Personas, Mobile Design,</p3>
     </div>
     <div class="carousel-item">
     <h1>User Interface Design</h1>
+		<p3>Design Sketches, Sitemapping, Prototyping, Colour Theory, Typography</p3>
     </div>
     <div class="carousel-item">
-    <h1> and more text again</h1>
+    <h1>Technologies</h1>
+		<p3>HTML5, CSS, Bootstrap, Figma, Miro, Adobe Creative Suite, <br>
+Ideation & Prototyping, User Flow Diagramming, Heuristic Evaluation<br>
+Proto & User Personas, Mobile Design,</p3>
     </div>
   </div>
     <!--<h3 class="scrollheader"></h3>-->
