--- a/about.html
+++ b/about.html
@@ -17,13 +17,15 @@
 
           <ul class="list-unstyled">
 			  &nbsp;
-            <li><a href="#" class="text-white">01&nbsp;&nbsp;&nbsp; Home</a></li>
+            <li><a href="index.html" class="text-white">01&nbsp;&nbsp;&nbsp; Home</a></li>
 			  &nbsp;
-            <li><a href="#" class="text-white">02&nbsp;&nbsp;&nbsp; About</a></li>
+            <!--<li><a href="about.html" class="text-white">02&nbsp;&nbsp;&nbsp; About & Contact</a></li>-->
 			  &nbsp;
-            <li><a href="#" class="text-white">03&nbsp;&nbsp;&nbsp; Case Studies</a></li>
+            <li>02&nbsp;&nbsp;&nbsp; Case Studies:<ul><a href="caseone.html" class="text-white"><br>
+- Australia Post</a></ul><br>
+<ul><a href="casetwo.html" class="text-white">- DreamVerse</a></ul></li>
 			  &nbsp;
-			<li><a href="#" class="text-white">04&nbsp;&nbsp;&nbsp; Contact</a></li>
+			<li><a href="about.html" class="text-white">03&nbsp;&nbsp;&nbsp; About & Contact</a></li>
           </ul>
         </div>
 
@@ -50,7 +52,7 @@
     <h1>Matthew Turner</h1>
     <h3>About Me!</h3>
     <p1>I'm a designer currently looking for a career as a UX/UI Designer, focused on developing straightforward answers to intricate issues, using practical problemsolving skills and empathetic listening.</p1><br>
-		<p1>My background in Graphic Design is an asset when it comes to UI Design. In my spare time i tinker with Motion Graphics, HTML and CSS web technologies and spend time with my wife.</p1>
+		<p1>My background in Graphic Design is an asset when it comes to UI Design. In my spare time i tinker with Motion Graphics, HTML and CSS, web and hosting technologies and spend time with my wife.</p1>
 
 		&nbsp;
 		<!--<h4>Matthew Turner's Story</h4>
@@ -89,13 +91,12 @@ Proto & User Personas, Mobile Design,</p3>
     </div>
     <div class="carousel-item">
     <h1>User Interface Design</h1>
-		<p3>Design Sketches, Sitemapping, Prototyping, Colour Theory, Typography</p3>
+		<p3>Design Sketches, Sitemapping, Prototyping, Colour Theory, Typography, <br>
+UI Style Guides.</p3>
     </div>
     <div class="carousel-item">
     <h1>Technologies</h1>
-		<p3>HTML5, CSS, Bootstrap, Figma, Miro, Adobe Creative Suite, <br>
-Ideation & Prototyping, User Flow Diagramming, Heuristic Evaluation<br>
-Proto & User Personas, Mobile Design,</p3>
+		<p3>HTML5, CSS, Bootstrap, Figma, Miro, Adobe Creative Suite, Google Forms.</p3>
     </div>
   </div>
     <!--<h3 class="scrollheader"></h3>-->
