--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 			  &nbsp;
             <li><a href="index.html" class="text-white">01&nbsp;&nbsp;&nbsp; Home</a></li>
 			  &nbsp;
-            <li><a href="about.html" class="text-white">02&nbsp;&nbsp;&nbsp; About</a></li>
+            <!--<li><a href="about.html" class="text-white">02&nbsp;&nbsp;&nbsp; About & Contact</a></li>-->
 			  &nbsp;
-            <li><a href="#" class="text-white">03&nbsp;&nbsp;&nbsp; Case Studies</a></li>
+            <li>02&nbsp;&nbsp;&nbsp; Case Studies:<ul><a href="caseone.html" class="text-white"><br>
+- Australia Post</a></ul><br>
+<ul><a href="casetwo.html" class="text-white">- DreamVerse</a></ul></li>
 			  &nbsp;
-			<li><a href="#" class="text-white">04&nbsp;&nbsp;&nbsp; Contact</a></li>
+			<li><a href="about.html" class="text-white">03&nbsp;&nbsp;&nbsp; About & Contact</a></li>
           </ul>
         </div>
         <!--<div class="col-sm-4 offset-md-1 py-4">
@@ -65,7 +67,7 @@
 		  </div>
 		  <h3>UX Designer</h3>
 		  <h1>Matthew Turner</h1>
-		  <p>some text is sitting in here</p>
+		  <p>UX/UI Designer • Researcher • Problem Solver</p>
 		  <div class="abtlink">
 		  <a href="about.html"><p2> About Me <i class="bi bi-arrow-right" fill="#FFFFFF" style="vertical-align: middle;"></i></p2></a>
 			  </div>
