--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 		      <div class="studytext">
           <h3>Case Study</h3>
 		  <h1>Australia Post</h1>
-		  <p>Research & Redesign</p>
+		  <p>Research, UX Design, Prototyping.<br>
+Boost completion rate and reduce frustations by<br>
+ de-cluttering and simplifying pages and navigation.</p>
 		  <div class="study1link">
 		  <a href="caseone.html"><p2> View case study <i class="bi bi-arrow-right" fill="#FFFFFF" style="vertical-align: middle;"></i></p2></a>
 			  </div>
@@ -91,7 +93,9 @@
 		      <div class="study2text">
           <h3>Case Study</h3>
 		  <h1>Dream Verse</h1>
-		  <p>Front-End Developer / UI Designer</p>
+		  <p>Front-End Developer (HTML5, CSS), UI Designer.<br>
+A Mobile app for writing, saving <br>
+and interpreting your dreams.</p>
 		  <div class="study2link">
 		  <a href="casetwo.html"><p2> View case study <i class="bi bi-arrow-right" fill="#FFFFFF" style="vertical-align: middle;"></i></p2></a>
 			  </div>
